# cleanflight

./: .checkformatting.sh  .gitignore  .travis.sh  .travis.yml  CNAME  CONTRIBUTING.md  GPS for SPRF3  Makefile  Makefile Manual.md  README.md  Vagrantfile  azure-pipelines.yml  b5natddh.h5l.txt  baseflight.uvproj  build_all_targets.sh  build_docs.sh  error.txt  essentials.txt  fake_travis_build.sh  index.html  install-ubuntu-preq.sh  itqk3kwk.5nx.txt  k4vyqr1i.4yf.txt  mgfmb0kk.f2m.txt  out  output_file.txt  params.json  stm32_flash_f405.ld
lib/test/gtest/: CMakeLists.txt
src/: .gitattributes  CMakeLists.txt  board.h  build_config.c  buzzer.c  buzzer.h  cli.c  config.c  config.h  doxy2swig.py  drv_adc.c  drv_adc.h  drv_adxl345.c  drv_ak8975.c  drv_ak8975.h  drv_bmp085.c  drv_hcsr04.c  drv_hmc5883l.c  drv_hmc5883l.h  drv_i2c.c  drv_i2c.h  drv_i2c_soft.c  drv_mma845x.c  drv_mpu6050.c  drv_mpu6500.c  drv_mpu6500.h  drv_mpu9150.c  drv_mpu9150.h  drv_ms5611.c  drv_pwm.c  drv_pwm.h  drv_serial.h  drv_softserial.c  drv_softserial.h  drv_spi.c  drv_spi.h  drv_system.c  drv_system.h  drv_timer.c  drv_uart.c  (+32 more)
src/MyCode/: data_upload.c  data_upload.h  nRF24L01p.c  nRF24L01p.h  spi2.c  spi2.h
src/aio/: aio.c
src/arm/: 96boards.c  CMakeLists.txt  arm.c  banana.c  beaglebone.c  raspberry_pi.c
src/drivers/: barometer_bmp085.c  pwm_common.h
src/firmata/: CMakeLists.txt  firmata.c  firmata_mraa.c
src/glob/: glob.c  glob.h
src/gpio/: gpio.c
src/i2c/: LICENSE  i2c.c
src/iio/: iio.c
src/java/: CMakeLists.txt  manifest.txt.in  mraajava.i  mraajava.pc.cmake  mraajni.c  pom.xml.in
src/javascript/: CMakeLists.txt  binding.gyp.cmake  doxygen2jsdoc_custom.json  mraajs.i  package.json.cmake
src/json/: jsonplatform.c
src/main/: build_config.h  ctype.h  debug.h  includes.h  kalman_filter.c  kalman_filter.h  main.c  main_fault_handler.c  main_fault_handler.h  main_initialisation.c  main_initialisation.h  mw.c  mw.h  out.txt  platform.h  scheduler.c  scheduler.h  version.h
src/main/blackbox/: blackbox.c  blackbox.h  blackbox_encoding.c  blackbox_encoding.h  blackbox_fielddefs.h  blackbox_io.c  blackbox_io.h
src/main/cli/: cli.c  cli.h  cli_debug_print.h  settings.c  settings.h
src/main/cms/: cms.c  cms.h  cms_menu_blackbox.c  cms_menu_blackbox.h  cms_menu_builtin.c  cms_menu_failsafe.c  cms_menu_failsafe.h  cms_menu_firmware.c  cms_menu_firmware.h  cms_menu_gps_rescue.c  cms_menu_gps_rescue.h  cms_menu_imu.c  cms_menu_imu.h  cms_menu_ledstrip.c  cms_menu_ledstrip.h  cms_menu_main.c  cms_menu_main.h  cms_menu_misc.c  cms_menu_misc.h  cms_menu_osd.c  cms_menu_osd.h  cms_menu_power.c  cms_menu_power.h  cms_menu_saveexit.c  cms_menu_saveexit.h  cms_menu_vtx_common.c  cms_menu_vtx_common.h  cms_menu_vtx_rtc6705.c  cms_menu_vtx_rtc6705.h  cms_menu_vtx_smartaudio.c  cms_menu_vtx_smartaudio.h  cms_menu_vtx_tramp.c  cms_menu_vtx_tramp.h  cms_types.h
src/main/common/: atomic.h  axis.h  bitarray.c  bitarray.h  bitstream.c  bitstream.h  color.h  colorconversion.c  colorconversion.h  crc.c  crc.h  encoding.c  encoding.h  filter.c  filter.h  gps_conversion.c  gps_conversion.h  huffman.c  huffman.h  huffman_table.c  maths.c  maths.h  pilot.c  pilot.h  printf.c  printf.h  printf_serial.c  printf_serial.h  sensor_alignment.c  sensor_alignment.h  sensor_alignment_impl.h  streambuf.c  streambuf.h  string_light.c  strtol.c  strtol.h  time.c  time.h  typeconversion.c  typeconversion.h  (+3 more)
src/main/config/: beeper.c  beeper.h  config.c  config.h  config_eeprom.c  config_eeprom.h  config_master.h  config_profile.h  config_reset.h  config_streamer.c  config_streamer.h  config_system.h  config_unittest.h  feature.c  feature.h  parameter_group.c  parameter_group.h  parameter_group_ids.h  profile.c  profile.h  runtime_config.c  runtime_config.h
src/main/drivers/: SFE_LSM9DS0.c  SFE_LSM9DS0.h  acc_sparkfun.c  accgyro.h  accgyro_adxl345.c  accgyro_adxl345.h  accgyro_bma280.c  accgyro_bma280.h  accgyro_l3g4200d.c  accgyro_l3g4200d.h  accgyro_l3gd20.c  accgyro_l3gd20.h  accgyro_lsm303dlhc.c  accgyro_lsm303dlhc.h  accgyro_mma845x.c  accgyro_mma845x.h  accgyro_mpu.c  accgyro_mpu.h  accgyro_mpu3050.c  accgyro_mpu3050.h  accgyro_mpu6050.c  accgyro_mpu6050.h  accgyro_mpu6500.c  accgyro_mpu6500.h  accgyro_spi_mpu6000.c  accgyro_spi_mpu6000.h  accgyro_spi_mpu6500.c  accgyro_spi_mpu6500.h  adc.c  adc.h  adc_impl.h  adc_stm32f10x.c  adc_stm32f30x.c  adc_stm32f4xx.c  adc_stm32f7xx.c  adc_stm32g4xx.c  adc_stm32h7xx.c  audio.h  audio_stm32f7xx.c  audio_stm32h7xx.c  (+280 more)
src/main/fc/: board_info.c  board_info.h  boot.c  cleanflight_fc.c  cleanflight_fc.h  cli.c  config.c  config.h  controlrate_profile.c  controlrate_profile.h  core.c  core.h  dispatch.c  dispatch.h  fc_core.c  fc_init.c  fc_msp.c  fc_rc.c  fc_serial.c  fc_serial.h  fc_tasks.c  fc_tasks.h  hardfaults.c  init.c  init.h  msp_server_fc.c  msp_server_fc.h  obj  rate_profile.c  rc.c  rc.h  rc_adjustments.c  rc_adjustments.h  rc_controls.c  rc_controls.h  rc_curves.c  rc_curves.h  rc_modes.c  rc_modes.h  runtime_config.c  (+7 more)
src/main/flight/: altitudehold.c  altitudehold.h  butterworth.c  butterworth.h  failsafe.c  failsafe.h  flight.c  gps_conversion.c  gps_conversion.h  gps_rescue.c  gps_rescue.h  gtune.c  gtune.h  gyroanalyse.c  gyroanalyse.h  hil.h  imu.c  imu.h  interpolated_setpoint.c  interpolated_setpoint.h  lowpass.c  mixer.c  mixer.h  mixer_tricopter.c  mixer_tricopter.h  navigation.c  navigation.h  pid.c  pid.h  (+12 more)
src/mock/: CMakeLists.txt  mock.c  mock_board.c  mock_board_aio.c  mock_board_gpio.c  mock_board_i2c.c  mock_board_spi.c
src/pwm/: pwm.c
src/python/: CMakeLists.txt  mraapy.c  mraapython.i
src/spi/: spi.c
src/test/: CMakeLists.txt  Makefile  voltage_unittest.exe.stackdump
src/uart/: uart.c
src/uart_ow/: CMakeLists.txt  uart_ow.c
src/usb/: CMakeLists.txt  ftdi_ft4222.c  usb.c
src/utils/: def_generated.pl
src/x86/: CMakeLists.txt  intel_cherryhills.c  intel_de3815.c  intel_edison_fab_c.c  intel_galileo_rev_d.c  intel_galileo_rev_g.c  intel_gt_tuchuck.c  intel_minnow_byt_compatible.c  intel_nuc5.c  intel_sofia_3gr.c  up.c  x86.c
(+1264 files in other folders)
